# kimi-code-swarm

./: .gitignore  CHANGELOG.md  README.md  demo.py  install.sh  pyproject.toml  uninstall.sh
docs/: stress-test-report-2026-05-13.md
hooks/: swarm-startup.sh
kimi_swarm/: __init__.py  _dashboard_server.py  cli.py  display.py  mcp_client.py  mcp_server.py  model_mapping.py  models.py  orchestrator.py  web_dashboard.py
scripts/: verify_dashboard.py
skills/kimi-swarm/: SKILL.md
tests/: conftest.py  test_swarm.py
