[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-swarm"
version = "0.1.0"
description = "Swarm orchestration CLI and framework for Kimi Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
kimi-swarm = "kimi_swarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kimi_swarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
